edits to nav and foot bars, responsive portfolio page, and added media query for navbar @ 640px

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,24 +18,105 @@
 
   <!-- Nav bar -->
 
-  <nav class="navbar">
-      <div class="container justify-content-space-between" id="navItems">
-        <h2>Mark</h2>
-        <ul class="nav">
-          <li class="nav-item link-border">
-            <a class="nav-link" href="index.html">About</a>
-          </li>
-          <li class="nav-item link-border">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-    </nav>
-  
-    <!-- Nav bar end -->
+  <nav class="navbar sticky-top">
+    <div class="container justify-content-space-between" id="navItems">
+      <h2>Mark</h2>
+      <ul class="nav">
+        <li class="nav-item link-border">
+          <a class="nav-link" href="index.html">About</a>
+        </li>
+        <li class="nav-item link-border">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+  </nav>
+
+  <!-- Nav bar end -->
+
+
+
+  <div class="container content">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Portfolio</h1>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <!-- <div class="col-md-12"> -->
+        <div class="portImg">
+          <img src="images/city.jpg" class="img-fluid" id="city" alt="City">
+          <h6>Urban Foraging</h6>
+        </div>
+        <div class="portImg">
+          <img src="images/eyes.jpg" class="img-fluid portImg" id="eyes" alt="Eyes">
+          <h6>Eye Transplants</h6>
+        </div>
+        <div class="portImg">
+          <img src="images/gorilla.jpg" class="img-fluid portImg" id="gorilla" alt="Gorilla">
+          <h6>Scrumptious</h6>
+        </div>
+        <div class="portImg">
+          <img src="images/flower.jpg" class="img-fluid portImg" id="flower" alt="Flower">
+          <h6>Nicolas Cage</h6>
+        </div>
+        <div class="portImg">
+          <img src="images/sunset.jpg" class="img-fluid portImg" id="sunset" alt="Sunset">
+          <h6>Everyone Dies</h6>
+        </div>
+        <!-- </div> -->
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class="footbar">
+      <div class="copyright">
+        <p class="copy">Copyright &copy; 2019 </p>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
 </html>
+
+<!-- <div class="container content">
+    <div class="d-flex flex-row">
+      <div class="p-2">
+        <div class="portImg">
+          <img src="images/city.jpg" class="img-fluid" id="city" alt="City">
+          <h6>Urban Foraging</h6>
+        </div>
+      </div>
+      <div class="p-2">
+        <div class="portImg">
+          <img src="images/eyes.jpg" class="img-fluid portImg" id="eyes" alt="Eyes">
+          <h6>Eye Transplants</h6>
+        </div>
+      </div>
+      <div class="p-2">
+        <div class="portImg">
+          <img src="images/gorilla.jpg" class="img-fluid portImg" id="gorilla" alt="Gorilla">
+          <h6>Scrumptious</h6>
+        </div>
+      </div>
+    </div>
+    <div class="d-flex flex-row">
+      <div class="p-2">
+        <div class="portImg">
+          <img src="images/flower.jpg" class="img-fluid portImg" id="flower" alt="Flower">
+          <h6>Nicolas Cage</h6>
+        </div>
+      </div>
+      <div class="p-2">
+        <div class="portImg">
+          <img src="images/sunset.jpg" class="img-fluid portImg" id="sunset" alt="Sunset">
+          <h6>Everyone Dies</h6>
+        </div>
+      </div>
+    </div>
+  </div> -->
