--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
   <!-- Nav bar -->
 
-  <nav class="navbar">
+  <nav class="navbar sticky-top">
       <div class="container justify-content-space-between" id="navItems">
         <h2>Mark</h2>
         <ul class="nav">
@@ -50,7 +50,7 @@
               </div>
               <div class="form-group">
                 <label for="InputEmail1">Email</label>
-                <input type="email" class="form-control" id="InputEmail1" placeholder="Password">
+                <input type="email" class="form-control" id="InputEmail1" placeholder="example@gmail.com">
               </div>
               <div class="form-group">
                 <label for="Textarea1">Message</label>
@@ -64,6 +64,13 @@
     </div>
   </div>
 
+  <footer>
+      <div class="footbar">
+        <div class="copyright">
+          <p class="copy">Copyright &copy; 2019 </p>
+        </div>
+      </div>
+    </footer>
 
 </body>
 
