--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- Nav bar -->
 
-  <nav class="navbar">
+  <nav class="navbar sticky-top">
     <div class="container justify-content-space-between" id="navItems">
       <h2>Mark</h2>
       <ul class="nav">
@@ -42,7 +42,7 @@
         <h1>About Me</h1>
         <div class="row">
           <div class="col-md-12">
-            <img class="float-left" src="images/simon.jpg" alt="Simon">
+            <img class="float-left img-fluid" src="images/simon.jpg" alt="Simon">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent quis imperdiet ligula. Nunc ac
               pellentesque enim, eu dignissim neque. Pellentesque at quam erat. Integer ac sapien sed libero porta
               viverra. Aenean ullamcorper felis ut nulla placerat viverra. Lorem ipsum dolor sit amet, consectetur
@@ -64,6 +64,13 @@
     </div>
   </div>
 
+  <footer>
+      <div class="footbar">
+        <div class="copyright">
+          <p class="copy">Copyright &copy; 2019 </p>
+        </div>
+      </div>
+    </footer>
 
 </body>
 
