--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <!-- <div class="col-md-12"> -->
+        <div class="col-md-12" id="imgContainer">
         <div class="portImg">
           <img src="images/city.jpg" class="img-fluid" id="city" alt="City">
           <h6>Urban Foraging</h6>
@@ -67,7 +67,7 @@
           <img src="images/sunset.jpg" class="img-fluid portImg" id="sunset" alt="Sunset">
           <h6>Everyone Dies</h6>
         </div>
-        <!-- </div> -->
+        </div>
       </div>
     </div>
   </div>
