--- a/portfolio.html
+++ b/portfolio.html
@@ -49,15 +49,15 @@
         <div class="col-md-12" id="imgContainer">
         <div class="portImg">
           <img src="images/city.jpg" class="img-fluid" id="city" alt="City">
-          <h6>Urban Foraging</h6>
+          <h6><a href="https://marcussilvus.github.io/word_guess_game" target="_blank">Hang Man</a></h6>
         </div>
         <div class="portImg">
           <img src="images/eyes.jpg" class="img-fluid portImg" id="eyes" alt="Eyes">
-          <h6>Eye Transplants</h6>
+          <h6><a href="https://marcussilvus.github.io/unit_4_game" target="_blank">Crystal Counter</a></h6>
         </div>
         <div class="portImg">
           <img src="images/gorilla.jpg" class="img-fluid portImg" id="gorilla" alt="Gorilla">
-          <h6>Scrumptious</h6>
+          <h6><a href="https://marcussilvus.github.io/TriviaGame " target="_blank">GoT Trivia</a></h6>
         </div>
         <div class="portImg">
           <img src="images/flower.jpg" class="img-fluid portImg" id="flower" alt="Flower">
