--- a/portfolio.html
+++ b/portfolio.html
@@ -61,13 +61,13 @@
         </div>
         <div class="portImg">
           <img src="images/flower.jpg" class="img-fluid portImg" id="flower" alt="Flower">
-          <h6>Nicolas Cage</h6>
+          <h6><a href="https://marcussilvus.github.io/gif_party/" target="_blank">Gif Party</a></h6>
         </div>
         <div class="portImg">
           <img src="images/sunset.jpg" class="img-fluid portImg" id="sunset" alt="Sunset">
           <h6>Everyone Dies</h6>
         </div>
-        </div>
+        </div>      
       </div>
     </div>
   </div>
