--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,8 @@
         </div>
         <div class="portImg">
           <img src="images/sunset.jpg" class="img-fluid portImg" id="sunset" alt="Sunset">
-          <h6>Everyone Dies</h6>
-        </div>
+          <h6><a href="https://marcussilvus.github.io/train_scheduler/" target="_blank">Train Scheduler</a></h6>
+        </div>    
         </div>      
       </div>
     </div>
