updated portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,31 +47,34 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12" id="imgContainer">
-        <div class="portImg">
-          <img src="images/city.jpg" class="img-fluid" id="city" alt="City">
-          <h6><a href="https://marcussilvus.github.io/word_guess_game" target="_blank">Hang Man</a></h6>
+          <div class="portImg">
+            <img src="images/city.jpg" class="img-fluid" id="city" alt="City">
+            <h6><a href="https://marcussilvus.github.io/word_guess_game" target="_blank">Hang Man</a></h6>
+          </div>
+          <div class="portImg">
+            <img src="images/eyes.jpg" class="img-fluid portImg" id="eyes" alt="Eyes">
+            <h6><a href="https://marcussilvus.github.io/unit_4_game" target="_blank">Crystal Counter</a></h6>
+          </div>
+          <div class="portImg">
+            <img src="images/gorilla.jpg" class="img-fluid portImg" id="gorilla" alt="Gorilla">
+            <h6><a href="https://marcussilvus.github.io/TriviaGame " target="_blank">GoT Trivia</a></h6>
+          </div>
+          <div class="portImg">
+            <img src="images/flower.jpg" class="img-fluid portImg" id="flower" alt="Flower">
+            <h6><a href="https://marcussilvus.github.io/gif_party/" target="_blank">Gif Party</a></h6>
+          </div>
+          <div class="portImg">
+            <img src="images/sunset.jpg" class="img-fluid portImg" id="sunset" alt="Sunset">
+            <h6><a href="https://marcussilvus.github.io/train_scheduler/" target="_blank">Train Scheduler</a></h6>
+          </div>
+          <div class="portImg">
+            <img src="images/night.jpg" class="img-fluid portImg" id="night" alt="Night">
+            <h6><a href="https://pironj.github.io/Group-Project-1/" target="_blank">Event Hunter</a></h6>
+          </div>
         </div>
-        <div class="portImg">
-          <img src="images/eyes.jpg" class="img-fluid portImg" id="eyes" alt="Eyes">
-          <h6><a href="https://marcussilvus.github.io/unit_4_game" target="_blank">Crystal Counter</a></h6>
-        </div>
-        <div class="portImg">
-          <img src="images/gorilla.jpg" class="img-fluid portImg" id="gorilla" alt="Gorilla">
-          <h6><a href="https://marcussilvus.github.io/TriviaGame " target="_blank">GoT Trivia</a></h6>
-        </div>
-        <div class="portImg">
-          <img src="images/flower.jpg" class="img-fluid portImg" id="flower" alt="Flower">
-          <h6><a href="https://marcussilvus.github.io/gif_party/" target="_blank">Gif Party</a></h6>
-        </div>
-        <div class="portImg">
-          <img src="images/sunset.jpg" class="img-fluid portImg" id="sunset" alt="Sunset">
-          <h6><a href="https://marcussilvus.github.io/train_scheduler/" target="_blank">Train Scheduler</a></h6>
-        </div>    
-        </div>      
       </div>
     </div>
   </div>
-
   <footer>
     <div class="footbar">
       <div class="copyright">
